<resources>
    <string name="app_name">NmtShopApp</string>
    <string name="home">Trang chủ</string>
    <string name="textLogin">Chào mừng bạn đến với NMTShop! Hãy đăng nhập để mua hàng!</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="btnlogin">Đăng nhập</string>
    <string name="hintPhone" translatable="false">Nhập tài khoản SDT của bạn</string>
    <string name="hintPassword">Nhập mật khẩu của bạn</string>
    <string name="textRegister">Xin chào! Đăng kí để sử dụng</string>
    <string name="register">Đăng kí</string>
    <string name="username">Tên tài khoản</string>
    <string name="phones">Số điện thoại</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="send_code">Yêu cầu mật khẩu mới</string>
    <string name="textForgotpassword">Hãy nhập số điện thoại của bạn, chúng tôi sẽ gửi mật khẩu mới qua tài khoản email bạn đã đăng kí.</string>
    <string name="profile">Hồ sơ</string>
    <string name="wishlist">Danh sách yêu thích</string>
    <string name="favorite">Yêu thích</string>
    <string name="cart">Giỏ hàng</string>
    <string name="addToBag">Thêm vào Giỏ hàng</string>
    <string name="signin">Đăng nhập</string>
    <string name="logout">Đăng xuất</string>
    <string name="changepassword">Đổi mật khẩu</string>
    <string name="updateprofile">Sửa hồ sơ</string>
    <string name="checkout">Thanh toán</string>
    <string name="permission">Permission</string>
    <string name="create">Tạo tài khoản mới</string>
    <string name="current">Mật khẩu hiện tại</string>
    <string name="newpass">Mật khẩu mới</string>
    <string name="confirm">Xác nhận mật khẩu</string>
    <string name="fullname">Họ tên</string>
    <string name="gender">Giới tính</string>
    <string name="dof">Ngày sinh</string>
    <string name="phone">Số điện thoại</string>
    <string name="address">Địa chỉ</string>
    <string name="update">Cập nhật</string>
    <string name="accept">Accept</string>
    <string name="searchNew">Mới nhất</string>
    <string name="searchSelling">Danh mục</string>
    <string name="searchPrice">Giá</string>
    <string name="myOrder">Lịch sử mua hàng</string>
    <string name="myAddress">Địa chỉ</string>
    <string name="addressNew">Địa chỉ mới</string>
    <string name="rating">Đánh giá</string>
    <string name="addressReceiver">Chọn địa chỉ nhận hàng</string>
    <string name="orderDetail">Thông tin đơn hàng</string>
    <string name="author"></string>
    <string name="publisher">Nhà xuất bản</string>
    <string name="category">Thể loại</string>
    <string name="home_bar">Sản phẩm</string>
    <string name="search_bar">Tìm kiếm</string>
    <string name="wishlist_bar">Danh sách yêu thích</string>
    <string name="cart_bar">Giỏ hàng</string>
    <string name="order">Mua hàng</string>
    <string name="onboard">Book Store</string>
    <string name="history_search">Lịch sử tìm kiếm</string>
    <string name="introduce">Good books, like good friends, are few and chosen; the more select, the more enjoyable</string>
    <string name="supplier">Mô tả:</string>
    <string name="year"></string>
    <string name="product">Sản Phẩm</string>
    <string name="createdOn">Ngày đặt hàng: </string>
    <string name="orderAddress">Địa chỉ giao hàng: </string>
    <string name="orderQuantity">Ngày giao hàng: </string>
    <string name="textTotal">Tổng tiền: </string>
    <string name="textStatus">Tình tạng đơn hàng:</string>
    <string name="language">Ngôn Ngữ: Tiếng Việt</string>
    <string name="quantity">Số lượng còn lại</string>
    <string name="sold">Đã bán</string>
    <string name="productId">Mã hàng:</string>
    <string name="readmore">Xem thêm.</string>
    <string name="price">Giá</string>
    <string name="deleteHistory">Xóa lịch sử tìm kiếm</string>
    <string name="deleteCart">Xóa tất cả</string>
    <string name="sign_out_message">Bạn có chắc chắn muốn đăng xuất tài khoản?</string>
    <string name="clearData">Bạn có chắc chắn muốn xóa data &amp; cache?</string>
    <string name="messageExpiresIn">Phiên đăng nhập đã hết hạn. Bạn vui lòng đăng nhập lại để sử dụng!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>