<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/text_cart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_24"
        android:layout_marginTop="22dp"
        android:text="@string/cart"
        android:textColor="@color/black"
        android:textSize="@dimen/dp_24"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:src="@drawable/ic_account_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/text_delete_cart"
        android:text="@string/deleteCart"
        android:layout_marginTop="10dp"
        android:textColor="@color/status"
        android:textSize="14dp"
        android:padding="5dp"
        android:visibility="gone"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        app:layout_constraintEnd_toEndOf="@id/image_profile"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@id/constraint"
        app:layout_constraintEnd_toEndOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/text_cart"
        app:layout_constraintTop_toBottomOf="@id/text_delete_cart">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_cartItem"
            android:layout_width="0dp"
            android:layout_height="0dp" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <TextView
        android:id="@+id/text_cart_infor"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="Bạn chưa thêm sản phẩm nào vào giỏ hàng."
        android:textColor="@color/black"
        android:textSize="25dp"
        android:textStyle="italic"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/image_profile"
        app:layout_constraintStart_toStartOf="@id/text_cart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/swipe_refresh">

        <TextView
            android:id="@+id/text_total"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textTotal"
            android:textColor="@color/primaryDeep"
            android:textSize="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="0 VND"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/text_total"
            app:layout_constraintTop_toBottomOf="@id/text_total" />

        <TextView
            android:id="@+id/text_check_out"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_btn_checkout"
            android:padding="15dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:text="@string/order"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>